# jzfs

./: .all-contributorsrc  .dockerignore  .editorconfig  .env  .fend.yaml  .gitignore  .golangci.yml  Cargo.toml  Contributing.md  Dockerfile  FUNDING.json  LICENSE  README.md  \  codecov.yml  config.dev.yaml  config.yaml  docker-compose.yaml  ed25519  go.mod  go.sum  lib.rs  main.go  main.rs  makefile  package.json  router.rs  rust-toolchain.toml  rustfmt.toml  sql.sql  test.txt
api/: Cargo.toml  aksk_opts.go  custom_response.go  custom_response_test.go  docs.go  jiaozifs.gen.go  resp.gen.go  swagger.yml  write.rs
api/api_impl/: common.go  impl.go  server.go  utils.go
api/handler/: auth.rs  explore.rs  mod.rs  product.rs  repo.rs  static_file.rs  users.rs
api/src/: lib.rs
api/src/auth/: mod.rs  user_context.rs  user_login.rs  user_logout.rs  user_register.rs
api/src/guard/: git.rs  mod.rs
api/src/repos/: commits.rs  data.rs  init.rs  mod.rs  recommend.rs  refs.rs  star.rs  tree.rs  watch.rs
api/src/users/: actives.rs  mod.rs  users.rs
api/template/: chi-middleware.tmpl
api/tmpls/chi/: chi-interface.tmpl  chi-middleware.tmpl
config/: Cargo.toml  blockstore.go  config.go  default.go  id_ed25519
config/src/: api.rs  database.rs  email.rs  git.rs  lib.rs  redis.rs  ssh.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/auth/: mod.rs  user_login.rs  user_logout.rs  user_register.rs
core/src/email/: captcha.rs  email_thread.rs  mod.rs
core/src/reactions/: interactions.rs  mod.rs
core/src/repos/: branch.rs  commit.rs  data.rs  find.rs  init.rs  mod.rs  star.rs  tree.rs  vector_search.rs  watch.rs
core/src/settings/: access_key.rs  avatar.rs  basic_form.rs  mod.rs  sshkey.rs
core/src/users/: active.rs  context.rs  follow.rs  mod.rs  users.rs
crates/jz-api/: Cargo.toml
crates/jz-api/src/: lib.rs
crates/jz-dragonfly/: Cargo.toml
crates/jz-dragonfly/src/: lib.rs
crates/jz-email/: Cargo.toml
crates/jz-email/src/: execute.rs  jobs.rs  lib.rs  message.rs
crates/jz-git/: .gitignore  Cargo.toml
crates/jz-git/src/: blob.rs  branches.rs  clone.rs  commits.rs  create.rs  delete.rs  lib.rs  list.rs  pr.rs  tree.rs  tree_dir.rs
crates/jz-iris/: Cargo.toml
crates/jz-jobs/: Cargo.toml
crates/jz-jobs/src/: lib.rs  seaorm.rs  sqlx.rs
crates/jz-migration/: Cargo.toml
crates/jz-model/: Cargo.toml
crates/jz-model-sqlx/: Cargo.toml
crates/jz-model-sqlx/src/: lib.rs
crates/jz-model/src/: lib.rs
crates/jz-service/: Cargo.toml
crates/jz-service/src/: app.rs  container.rs  lib.rs  mapper.rs
crates/jz-smart/: Cargo.toml
crates/jz-smart/src/: lib.rs  pack.rs  refs.rs
crates/jz-ssh/: Cargo.toml
crates/jz-ssh/src/: handle.rs  lib.rs  server.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/entity/: cf_scores.rs  email_verifications.rs  git_blob.rs  git_commit.rs  git_refs.rs  git_repo.rs  git_repo_stats.rs  git_tag.rs  git_tree.rs  hybrid_recommendations.rs  mod.rs  oauth_providers.rs  password_resets.rs  repo_features.rs  ssh_keys.rs  user_access_keys.rs  user_black.rs  user_follow.rs  user_interactions.rs  user_login_logs.rs  user_nostr.rs  user_oauth_accounts.rs  user_preferences.rs  user_repo.rs  user_repo_active.rs  user_repo_tagger.rs  user_session.rs  user_star_repo.rs  user_watch_repo.rs  users.rs
gateway/: Cargo.toml
gateway/src/: main.rs  ping.rs
gateway/src/api/: mod.rs
git/: Cargo.toml
git/src/: lib.rs
git/src/object/: blob.rs  commit.rs  mod.rs  refs.rs  tag.rs  tree.rs
git/src/service/: find.rs  mod.rs  permissions.rs  sync.rs
git/src/transport/: mod.rs
gitdata-auth/: Cargo.toml
gitdata-auth/src/: main.rs
gitdata-auth/src/api/: apply.rs  captcha.rs  check.rs  login.rs  mod.rs  now.rs
gitdata-auth/src/server/: ctrl.rs  mod.rs  passwd.rs
gitdata-repository/: Cargo.toml
gitdata-repository/src/: lib.rs
gitdata-repository/src/api/: avatar.rs  branches.rs  create.rs  info.rs  mod.rs
gitdata-repository/src/http/: mod.rs  pack.rs  refs.rs  text.rs
gitdata-repository/src/service/: access.rs  avatar.rs  create.rs  ctrl.rs  delete.rs  info.rs  mod.rs
gitdata-repository/src/transport/: mod.rs  pack.rs  refs.rs  text.rs
lib-config/: Cargo.toml
lib-config/src/: lib.rs
lib-config/src/config/: auth.rs  email.rs  kafka.rs  mod.rs  postgres.rs  redis.rs
lib-config/src/naming/: key.rs  mod.rs
lib-config/src/public/: captcha.html  users_forgetpasswd.html
lib-entity/: Cargo.toml
lib-entity/src/: lib.rs  migration.rs  session.rs  write.rs
lib-entity/src/groups/: groups.rs  mod.rs
lib-entity/src/repos/: blobtree.rs  branchs.rs  commits.rs  labels.rs  license.rs  mod.rs  repos.rs
lib-entity/src/teams/: mod.rs  teaminv.rs  teamrepo.rs  teams.rs  teamsus.rs
lib-entity/src/users/: email.rs  follower.rs  mod.rs  ssh_key.rs  star.rs  token_key.rs  two_factor.rs  users.rs  watchs.rs
lib/nacos/: Cargo.toml
lib/session/: Cargo.toml
lib/web-session/: Cargo.toml
libs/lib-entity/: Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20250812_000001_create_table.rs  m20250816_000002_add_is_private_to_git_repo.rs  m20250816_000003_remove_is_private_from_git_refs.rs  m20250816_000004_fix_git_commit_table.rs  m20250817_182246_add_name_email_to_user_repo_active.rs  m20250818_000005_create_git_repo_stats_table.rs  m20250818_000006_create_user_star_repo_table.rs  m20250818_000007_create_user_watch_repo_table.rs  m20250819_000008_update_recommendation_tables.rs  m20250819_000009_add_repo_stats_triggers.rs  main.rs
session/: Cargo.toml
session/src/: config.rs  lib.rs  middleware.rs  session.rs  session_ext.rs
web/: .dockerignore  Cargo.toml  Dockerfile  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/auth/: build.js  index.html  package-lock.json  package.json  vite.config.ts
web/embed/: lib.rs
web/error/: index.html  package.json  tsconfig.json  vite.config.ts
web/rust/: build.rs  dev.rs  lib.rs
web/src/: main.tsx
web/taskbox/: package.json  vite.config.ts
web/taskbox-fuzz/: package.json
(+1461 files in other folders)
