[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
    "ZhenYi <434836402@qq.com>",
    "Touyoutaaa <1849625991@qq.com>"
]
license = "MIT"
repository = "https://github.com/GitDataAi/jzfs"
description = "Cargo"
keywords = ["Cargo", "Rust", "Cargo-Rust"]
readme = "README.md"
homepage = "https://github.com/GitDataAi/jzfs"
documentation = "https://github.com/GitDataAi/jzfs"
publish = false
[workspace]
members = [
    "nfs/nfs_client",
    "nfs/nfs_serve",
    "serve/action",
    "serve/cert",
    "serve/endpoint",
    "serve/git-manage",
    "serve/issues",
    "serve/openapi",
    "serve/pull_request",
    "serve/workhorse"
]

resolver = "3"
