[workspace.package]
version = "0.0.1"
edition = "2024"
authors = [
    "ZhenYi <434836402@qq.com>",
    "Touyoutaaa <1849625991@qq.com>"
]
license = "MIT"
repository = "https://github.com/GitDataAi/jzfs"
description = "Cargo"
keywords = ["Cargo", "Rust", "Cargo-Rust"]
readme = "README.md"
homepage = "https://github.com/GitDataAi/jzfs"
documentation = "https://github.com/GitDataAi/jzfs"
publish = false
[workspace]
members = [ "lib/rpc-session", "lib/session", "lib/web-session",
    "nfs/nfs_client",
    "nfs/nfs_serve",
    "serve/action",
    "serve/cert",
    "serve/endpoint",
    "serve/git-manage",
    "serve/issues",
    "serve/openapi",
    "serve/pull_request",
    "serve/workhorse"
]

resolver = "3"


[workspace.dependencies]
nfs_client = { path = "nfs/nfs_client"}
nfs_serve = { path = "nfs/nfs_serve"}
action = { path = "serve/action"}
cert = { path = "serve/cert"}
endpoint = { path = "serve/endpoint"}
git_manage = { path = "serve/git-manage"}
issues = { path = "serve/issues"}
openapi = { path = "serve/openapi"}
pull_request = { path = "serve/pull_request"}
workhorse = { path = "serve/workhorse"}
web-session = { path = "lib/web-session"}
session = { path = "lib/session"}
rpc-session = { path = "lib/rpc-session"}

tokio = "1"
serde = "1"
serde_json = "1"
actix-web = "4"
actix-session = "0.10.1"
actix-cors = "0.7.1"
actix-web-httpauth = "0.8.2"
actix-utils = "3.0.1"
async-trait = "0.1.88"
lazy_static = "1.5.0"
rand = "0.9.1"
chrono = "0.4.41"
time = "0.3.41"
uuid = "1.17.0"
tarpc = "0.36.0"
git2 = "0.20.2"
sea-orm = "1"
sea-orm-migration = "1"
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
sha256 = "1.6.0"
captcha-rs = "0.2.11"
deadpool = "0.12.2"
deadpool-redis = "0.21.1"
anyhow = "1.0.98"
dotenv = "0.15.0"
flate2 = "1.1.2"
bytes = "1.10.1"
russh = "0.53.0"
futures = "0.3.31"
cookie = "0.18.1"
dashmap = "7.0.0-rc2"
async-nats = "0.42.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
filetime = "0.2.25"
byteorder = "1.5.0"