[workspace]
members = [
    "api",
    "config",
    "core",
    "database",
    "error",
    "git",
    "session",
    "web",
    "migration"
]
resolver = "3"
[workspace.dependencies]
database = { path = "database" }
git = { path = "git" }
session = { path = "session" }
core = { path = "core" }
config = { path = "config" }
error = { path = "error" }
api = { path = "api" }
migration = { path = "migration" }
ui = { path = "web" }

[package]
name = "jzfs"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "bin/main.rs"
name = "jzfs"

[dependencies]
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
clap = { version = "4.5.43", features = ["suggestions", "help", "default", "derive"] }
error = { workspace = true }
config = { workspace = true }
core = { workspace = true }
database = { workspace = true }
git = { workspace = true }
api = { workspace = true }
session = { workspace = true }
migration = { workspace = true }
log = "0.4.27"
lazy_static = "1.5.0"
tracing-subscriber = "0.3.19"
