[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { workspace = true }
database = { workspace = true }
git = { workspace = true }
session = { workspace = true }
error = { workspace = true }
core = { workspace = true }
web_ui = { package = "ui", path = "../web" }

actix-web = { version = "4.11.0", features = [] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
async-stream = { version = "0.3.6", features = [] }
futures-util = { version = "0.3.31", features = ["default"] }
serde = { version = "1.0.219", features = ["default"] }
serde_json = { version = "1.0.142", features = ["alloc"] }
sea-orm = { version = "1.1.14", features = ["sqlx-all", "pgvector","runtime-tokio","uuid","chrono"] }
bb8 = { version = "0.9.0", features = ["parking_lot"] }
bb8-redis = { version = "0.24.0", features = [] }
redis = { version = "0.32.5", features = ["uuid","acl","aio"] }
anyhow = "1.0.98"
sha256 = { version = "1.6.0", features = ["tokio"] }
uuid = { version = "1.18.0", features = ["serde","v4"] }
tracing = "0.1.41"
sha2 = "0.10.9"