[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.14", features = ["sqlx-all", "postgres-vector","runtime-tokio","seaography", "uuid", "chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = {  version = "1.18.0", features = ["serde","v7","v4"] }
chrono = { version = "0.4.41", features = ["clock","serde"] }