[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-session = { workspace = true, features = ["default", "redis-pool","redis-session"] }
actix-web = { workspace = true, features = ["cookies"] }
awc = { version = "3.5.1", features = ["cookies"] }
lib-config = { workspace = true }
tracing-subscriber = "0.3.19"
log = "0.4.25"
thiserror = "2.0.11"
futures = "0.3.31"
lazy_static = "1.5.0"
url = "2.5.4"
