[package]
name = "gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-session = { path = "../libs/lib-session", features = ["default", "redis-pool","redis-session"] }
lib-config = { path = "../libs/lib-config" }
actix-web = { version = "4.9.0", features = ["cookies"] }
awc = { version = "3.5.1", features = ["cookies"] }
tracing-subscriber = "0.3.19"
log = "0.4.25"
thiserror = "2.0.11"
futures = "0.3.31"
lazy_static = "1.5.0"
url = "2.5.4"
