[package]
name = "lib-entity"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
sea-orm = { workspace = true, features = ["sqlx-all", "sqlx-postgres"] }
uuid = { workspace = true, features = ["serde","v4"]}
sea-orm-migration = { version = "1.1.4", features = ["runtime-tokio","cli","sqlx-postgres"] }
chrono = { version = "0.4.39", features = ["clock","default"]}
anyhow = "1.0.95"
sha256 = "1.5.0"
actix-web = "4.9.0"
serde_json = "1.0.138"
