[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
tokio = {version = "1.47.1", features = ["full"] }
dotenv = { version = "0.15.0", features = [] }
[dependencies.sea-orm-migration]
version = "1.1.0"
features = [
    "runtime-tokio",
    "sqlx-postgres",
]

[dependencies.sea-query]
version = "0.32.7"
features = ["postgres-vector"]
