[package]
name = "session"
version = "0.1.0"
edition = "2024"

[dependencies]
time = { version = "0.3.41", features = ["serde"] }
anyhow = { version = "1.0.98", features = [] }
actix-web = { version = "4.11.0", features = ["cookies","secure-cookies"] }
cookie = { version = "0.18.1", features = ["key-expansion"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
derive_more = "2.0.1"
tracing = "0.1.41"
rand = "0.9.2"
actix-utils = "3.0.1"


sea-orm = "1.1.14"
bb8 = "0.9.0"
redis = { version = "0.32.5", features = ["bb8","aio","cache-aio"]}
bb8-redis = { version = "0.24.0", features = []}
database = { workspace = true }
chrono = "0.4.41"