[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true


[lib]
path = "rust/lib.rs"
name = "web"

[[bin]]
path = "rust/build.rs"
name = "web-build"


[dependencies]
actix-web = { workspace = true, features = ["cookies","compress-gzip"] }
awc = { version = "3.7.0", features = ["rustls", "compress-zstd","compress-gzip"] }
tokio = { workspace = true, features = ["full"] }
dotenv = { workspace = true }
