[package]
name = "web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true


[lib]
path = "rust/lib.rs"
name = "web"


[dependencies]
actix-web = { workspace = true, features = ["cookies","compress-gzip"] }
actix-web-static-files = { version = "4.0.1", features = ["change-detection"] }
actix-files = { workspace = true, features = ["tokio-uring"] }
tokio = { workspace = true, features = ["full"] }