[package]
name = "jz-dragonfly"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
deadpool-redis = { version = "0.16.0", features = ["rt_tokio_1","cluster"] }

