[package]
name = "jz-email"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
futures = { version = "0.3.31"}
lettre = {version = "0.11.10",features = [
    "smtp-transport",
    "serde",
    "rustls-tls",
    "rustls-native-certs",
    "hostname",
    "tokio1",
    "tokio1-rustls-tls",
    "tokio1-native-tls"
]}
tokio = { version = "1", features = ["full"] }
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
async-iterator = { version = "2.3.0", features = ["default"] }
uuid = { version = "1.16.0", features = ["v4"] }
sea-orm = { version = "1", features = ["sqlx-all", "runtime-tokio"] }
log = "0.4.26"

[dev-dependencies]
tracing-subscriber = "0.3.19"

[dependencies.jz-jobs]
workspace = true

