[package]
name = "jz-jobs"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[features]
default = ["sql"]
sql = []



[dependencies]
async-trait = "0.1.87"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.40"
sea-orm = {version = "1", features = ["sqlx-all","runtime-tokio"] }
[dependencies.sqlx]
version = "0.8.5"
features = [
    "postgres",
    "mysql",
    "runtime-tokio",
    "chrono",
    "uuid",
    "ipnet",
    "json",
    "mac_address",
    "rust_decimal",
    "_sqlite"
]