[package]
name = "jz-model-sqlx"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = [] }
uuid = { version = "1", features = ["v7","v4"] }
chrono = { version = "0.4", features = ["clock","serde"] }
anyhow = { version = "1", features = ["backtrace"] }
async-graphql = { version = "7", features = ["tokio"]}
[dependencies.sqlx]
version = "0.8.5"
features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "uuid",
    "ipnet",
    "json",
    "mac_address",
    "rust_decimal",
    "_sqlite"
]
