[package]
name = "jz-service"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v7","v4"] }
chrono = { version = "0.4", features = ["clock","serde"] }
tokio = { version = "1", features = ["full"] }
dotenv = { version = "0.15.0" ,features = [] }
anyhow = { version = "1", features = ["backtrace"] }
sha256 = { version = "1", features = ["tokio"] }
serde_json = "1.0.140"
log = "0.4.26"
rand = "0.8.5"
[dependencies.sqlx]
version = "0.8.5"
features = [
    "postgres",
    "mysql",
    "runtime-tokio",
    "chrono",
    "uuid",
    "ipnet",
    "json",
    "mac_address",
    "rust_decimal",
    "_sqlite"
]
[dependencies.jz-git]
workspace = true
[dependencies.jz-email]
workspace = true
[dependencies.jz-dragonfly]
workspace = true
[dependencies.jz-model-sqlx]
workspace = true
[dependencies.jz-jobs]
workspace = true