[package]
name = "jz-smart"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = { version = "1", features = [] }
actix-web = { version = "4", features = [] }
async-stream = { version = "0.3", features = [] }
flate2 = { version = "1", features = [] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


[dependencies.jz-module]
workspace = true

[dependencies.jz-git]
workspace = true