[package]
name = "jz-ssh"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
documentation.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description.workspace = true
homepage.workspace = true

[dependencies]
russh = { version = "0.51.1", features = ["flate2","async-trait"] }
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["default"] }
futures = "0.3.31"
anyhow = "1.0.97"


[dependencies.jz-module]
workspace = true

[dependencies.jz-git]
workspace = true