[package]
name = "nacos"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
tarpc = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = ["full"] }
nacos-sdk = { workspace = true , features = ["naming","config"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }