[package]
name = "session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme.workspace = true
homepage.workspace = true
documentation.workspace = true
publish.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
dashmap = { workspace = true, features = ["all"] }
time = { workspace = true, features = [] }
anyhow = { workspace = true, features = ["std"] }
async-trait = { workspace = true, features = [] }
deadpool-redis = { workspace = true, features = ["rt_tokio_1","cluster","sentinel","cache-aio","json","connection-manager"] }
uuid = { workspace = true, features = ["v4","v7"] }